# yaru818

./: .env.sh  .gitignore  .gitmodules  README.md  all.sh  build.sh  init.sh  install.sh  make.sh  package_deb.sh  package_flatpak.sh  patch.sh
src/: accent-colors.scss.in  cinnamon-patch.scss  configure-flatpak.sh  gtk4-patch.scss  meson.build  meson_options.txt
src/gtksourceview/: dark-5.xml.in  dark.xml.in
