option('icons', type: 'boolean', value: true, description:'build icons component')
option('gnome-shell', type: 'boolean', value: true, description:'build gnome-shell component')
option('gnome-shell-default-variant', type: 'string', value: 'light', description:'default variant to be used for gnome-shell')
option('gnome-shell-default-high-contrast-variant', type: 'string', value: 'blue-dark', description:'default variant to be used for gnome-shell high contrast')
option('gnome-shell-gresource', type: 'boolean', value: false, description: 'build gnome-shell component in gresources')
option('gnome-shell-user-themes-support', type: 'feature', value: 'auto', description: 'install gnome-shell uncompressed CSS themes as User Themes expects')
option('gdm-default-variant', type: 'string', value: 'dark', description:'default variant to be used in GDM')
option('gtk', type: 'boolean', value: true, description:'build gtk component')
option('gtksourceview', type: 'boolean', value: true, description:'build gtksourceview component')
option('metacity', type: 'boolean', value: true, description:'build metacity component')
option('sounds', type: 'boolean', value: true, description:'build sounds component')
option('sessions', type: 'boolean', value: true, description:'build sessions component')
option('cinnamon-shell', type: 'boolean', value: true, description:'build cinnamon component')

option('default', type: 'boolean', value: true, description:'build Yaru default flavour')
option('dark', type: 'boolean', value: true, description:'build Yaru dark flavour')

option('mate', type: 'boolean', value: false, description:'Removed')
option('mate-dark', type: 'boolean', value: false, description:'Removed')
option('ubuntu-unity', type: 'boolean', value: false, description:'Removed')
option('xfwm4', type: 'boolean', value: false, description:'Removed')
option('cinnamon', type: 'boolean', value: false, description:'Removed')
option('cinnamon-dark', type: 'boolean', value: false, description:'Removed')
